--- a/katalog/src/style.css
+++ b/katalog/src/style.css
@@ -204,7 +204,9 @@ form textarea {
 
     .p div {
         margin-left: 5vw;
-        height: 50vh;
+       
+        width: 90vw;
+        height: auto;
     }
 }
 @media (max-width: 768px) {
@@ -277,6 +279,7 @@ form textarea {
 
     .p div {
         margin-left: 1vw;
-        height: 50vh;
+        width: 90vw;
+        height: auto;
     }
 }
